<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/jugador_view">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_16dp"
        >

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:minEms="12" />

        <TextView
            android:id="@+id/surename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/surename"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:minEms="12" />

        <TextView
            android:id="@+id/dorsal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dorsal"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:minEms="12" />


    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2dp"
        app:dividerInsetEnd="@dimen/_16dp"
        app:dividerInsetStart="@dimen/_16dp"
        android:background="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>